src/global.scss
*,
*::before,
*::after {
	box-sizing: border-box;
	color: inherit;
}

html,
body {
	// position: relative;
	margin: 0;
	height: 100%;
	// width: 100%;
}

body {
	display: flex;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

input,
button,
select,
textarea {
	font-family: inherit;
	font-size: inherit;
}

[data-theme='dark'] {
	--text-primary-color: hsl(0, 0%, 82%);
	--background-color: hsl(0, 0%, 8%);

	--button-background-color: hsl(0, 0%, 15%);
	--button-hover-background-color: hsl(0, 0%, 20%);
	--button2-hover-background-color: hsl(0, 0%, 25%);
	--button-active-background-color: hsl(0, 0%, 30%);

	--icon-button-color: hsl(0, 0%, 20%);
	--icon-button-hover-color: hsl(0, 0%, 16%);

	--input-background-color: rgb(18, 18, 18);
	--input-border-color: #3d3d3d;
	--input-outline-color: rgb(81, 81, 185);

	--modal-background-color: var(--background-color);
	--modal-header-background-color: rgb(50, 50, 50);

	--panel-background-color: rgb(38, 38, 38);
	--panel-icon-color: rgb(184, 184, 184);
	--panel-icon-color-active: rgb(178, 174, 255);
	--panel-icon-color-hover: rgb(150, 150, 150);
	--panel-radio-background: rgb(38, 38, 38);
	--panel-radio-background-hover: rgb(61, 61, 61);
	--panel-radio-background-active: rgb(79, 77, 111);
	--panel-radio-border-color: #3d3d3d;
	--panel-radio-border-active: #beb9ff;

	--focus-highlight-color: #228be6;
	--focus-shadow: 0 0 0 2px var(--focus-highlight-color);

	--grid-background-color: rgb(64, 64, 64);
}

[data-theme='light'] {
	--text-primary-color: black;
	--background-color: rgb(255, 255, 255);

	--button-background-color: hsl(0, 0%, 85%);
	--button-hover-background-color: hsl(0, 0%, 80%);
	--button2-hover-background-color: hsl(0, 0%, 75%);
	--button-active-background-color: hsl(0, 0%, 70%);

	--icon-button-color: hsl(0, 0%, 55%);
	--icon-button-hover-color: hsl(0, 0%, 40%);

	--input-background-color: rgb(236, 236, 236);
	--input-border-color: #d6d6d6;
	--input-outline-color: rgb(60, 60, 190);

	--modal-background-color: var(--background-color);
	--modal-header-background-color: rgb(230, 230, 230);

	--panel-background-color: rgba(255, 255, 255, 0.96);
	--panel-icon-color: rgb(71, 71, 71);
	--panel-icon-color-active: rgb(91, 87, 209);
	--panel-icon-color-hover: rgb(105, 105, 105);
	--panel-radio-background: rgba(255, 255, 255, 0.96);
	--panel-radio-background-hover: rgb(235, 235, 235);
	--panel-radio-background-active: rgb(227, 226, 254);
	--panel-radio-border-color: #d6d6d6;
	--panel-radio-border-active: #4a47b1;

	--focus-highlight-color: #50b3ff;
	--focus-shadow: 0 0 0 2px var(--focus-highlight-color);

	--grid-background-color: white;
}

main {
	--entry-panel-button-size: 2.5rem;
	--entry-panel-button-gap: 8px;

	--constraint-color-light-gray: lightgray;
	--constraint-color-gray: gray;
	--constraint-color-dark-gray: rgb(90, 90, 90);
	--constraint-color-purple: rgb(100, 0, 128);
	--constraint-color-green: green;
	--constraint-color-orange: orange;
	--constraint-color-light-blue: #2ecbff;
	--constraint-color-blue: rgb(105, 105, 255);
	--constraint-color-dark-blue: rgb(50, 50, 255);
	--constraint-color-yellow: yellow;
	--constraint-color-red: red;
	--constraint-color-dark-red: darkred;
	--constraint-color-gold: gold;
	--constraint-color-pink: pink;

	--seen-cells-color: hsl(60, 100%, 80%);
	--conflict-cells-color: hsl(0, 69%, 33%);

	--constraint-selected-color: #5274ea;
	--selection-color: #4ca4ff;

	--cell-digit-outline: white;
	--cell-digit-color: rgb(29, 106, 229);
	--cell-region-value-color: rgb(142, 142, 142);
	--cell-given-color: black;

	--cell-digit-conflict-color: rgb(255, 41, 41);
}

.modal-button {
	display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	background: var(--button-background-color);
	border-radius: 5px;
	border: 0;
	padding: 0.5rem;

	height: 3rem;

	&:hover {
		background: var(--button-hover-background-color);
	}

	&:focus {
		outline: transparent;
		box-shadow: var(--focus-shadow);
	}
}

.form-row {
	display: flex;
	align-items: center;
	gap: 0.5em;
	min-height: 1.75em;
}

.form-button {
	cursor: pointer;
	border-radius: 0.15rem;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: background 0.1s;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;

	&.icon {
		width: 2em;
		height: 2em;
		border: 0;
		border-radius: 0.2em;
		background-color: var(--button-background-color);

		&:hover {
			background-color: var(--panel-radio-background-hover);
		}
	}
}

.form-modal-button {
	background-color: var(--button-background-color);
	border-radius: 0.3rem;
	border: 0.125rem solid black;
	padding: 0.5rem;
	min-height: 2em;
	min-width: 2em;

	&:hover {
		background: var(--button-hover-background-color);
	}

	&:focus {
		outline: transparent;
		box-shadow: var(--focus-shadow);
	}
}

.settings-tab-layout {
	display: flex;
	flex-direction: column;
	padding: 0.5rem 0.5rem;
	gap: 0.5rem;
	overflow: auto;
	overflow-y: scroll;
}

.text-input {
	border: 2px solid var(--input-border-color);
	border-radius: 0.15rem;
	background: var(--input-background-color);
	display: flex;
	color: var(--text-primary-color);

	&:focus {
		outline: none;
		border: 2px solid var(--input-outline-color);
	}
}

